--- a/TalentEducation/src/main/webapp/WEB-INF/web.xml
+++ b/TalentEducation/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@ xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
 	
 	<filter>
