--- a/TalentEducation/pom.xml
+++ b/TalentEducation/pom.xml
@@ -194,6 +194,18 @@
 			<artifactId>ojdbc6</artifactId>
 			<version>11.1.0.6.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.5</version>
+		</dependency>
 	</dependencies>
 	<!-- ojdbc6 -->
 	<repositories>
