--- a/TalentEducation/pom.xml
+++ b/TalentEducation/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>javax.mail</artifactId> 
 			<version>1.5.6</version> 
 		</dependency>
+		<dependency>
+	    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4</version>
+		</dependency>
 		
 		<!-- Seucrity -->
 		<dependency>
