--- a/TalentEducation/pom.xml
+++ b/TalentEducation/pom.xml
@@ -156,7 +156,12 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
-
+		<!-- Databind -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.10.0.pr3</version>
+		</dependency>
 		<!-- mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
