--- a/TalentEducation/src/main/webapp/META-INF/maven/com.prj/te/pom.xml
+++ b/TalentEducation/src/main/webapp/META-INF/maven/com.prj/te/pom.xml
@@ -45,7 +45,18 @@
 			<artifactId>javax.mail</artifactId> 
 			<version>1.5.6</version> 
 		</dependency>
-		
+		<dependency>
+	    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4</version>
+		</dependency>
+		<!-- naver api -->
+		<dependency>
+			<groupId>com.github.scribejava</groupId>
+			<artifactId>scribejava-core</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+
 		<!-- Seucrity -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -66,6 +77,14 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${spring.security.version}</version>
+		</dependency>
+		<!-- captcha -->
+		<dependency>
+		    <groupId>nl.captcha</groupId>
+		    <artifactId>simplecaptcha</artifactId>
+		    <version>1.2.1</version>
+		    <scope>system</scope>
+		    <systemPath>${basedir}\src\main\webapp\WEB-INF\lib\simplecaptcha-1.2.1.jar</systemPath>
 		</dependency>
 
 		<!-- AspectJ -->
@@ -151,7 +170,12 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
-
+		<!-- Databind -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.10.0.pr3</version>
+		</dependency>
 		<!-- mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
