--- a/TalentEducation/pom.xml
+++ b/TalentEducation/pom.xml
@@ -16,6 +16,17 @@
 		<spring.security.version>4.1.3.RELEASE</spring.security.version>
 	</properties>
 	<dependencies>
+		<!-- common fileupload -->
+		<dependency>
+         <groupId>commons-fileupload</groupId>
+         <artifactId>commons-fileupload</artifactId>
+         <version>1.2.1</version>
+		</dependency>
+		<dependency>
+         <groupId>commons-io</groupId>
+         <artifactId>commons-io</artifactId>
+         <version>1.4</version>
+		</dependency>
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
